# terminal-weather

./: CHANGELOG.md  LICENSE  README.md  conf  dev.sh  pyproject.toml  requirements.txt  util.py
src/terminal-weather/: __main__.py  cli.py  owm.py  util.py
src/terminal_weather/: cli.py  config.py  output.py  owm.py  util.py
terminal-weather/: main.py  util.py
tests/: test_config.py  test_store_line.py  test_util.py
