[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-weather"
version = "0.1.1"
description = "A terminal program to get current weather and forecasts"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "COPYING" }
authors = [
    { name = "Hassan El anabi" }
]

dependencies = [
    "requests",
    "owmlib @ git+https://github.com/helanabi/owmlib.git@v0.1.0"
]

[project.scripts]
weather = "terminal_weather.cli:main"

[project.urls]
Homepage = "https://github.com/helanabi/terminal-weather"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
